// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProlongSubStake /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
        for="substake-prolong-duration"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          id="substake-prolong-duration"
          name="prolongDurationValue"
          type="number"
          value="1"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-4"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Prolong
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<ProlongSubStake /> should validate input from user correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
        for="substake-prolong-duration"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          id="substake-prolong-duration"
          name="prolongDurationValue"
          type="number"
          value="0"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-4"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Prolong
      </button>
    </div>
  </form>
</DocumentFragment>
`;
